--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -198,6 +198,18 @@ a:visited {
   object-fit: contain;
   z-index: 51;
 }
+@media (min-width: 481px) and (max-width: 768px) {
+  .nav__logo {
+    min-width: 40vw;
+    max-width: 0vw;
+  }
+}
+@media (max-width: 480px) {
+  .nav__logo {
+    min-width: 60vw;
+    max-width: 60vw;
+  }
+}
 .nav .nav-logo {
   object-fit: contain;
 }
@@ -210,6 +222,16 @@ a:visited {
   color: #fff;
   margin-bottom: 0;
   padding: 0;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .nav__ul {
+    gap: 5em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .nav__ul {
+    display: none;
+  }
 }
 .nav-li {
   font-family: "Assistant", sans-serif;
@@ -226,11 +248,25 @@ a:visited {
   flex-direction: row;
   gap: 3em;
   align-items: center;
-  padding-right: 10vw;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .nav__btn {
+    padding-right: 5vw;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .nav__btn {
+    display: none;
+  }
 }
 .nav-fa-landing {
   color: #EFEFEB;
   font-size: 3em;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .nav-fa-landing {
+    font-size: 2.5em;
+  }
 }
 .nav-btn {
   font-family: "Assistant", sans-serif;
@@ -243,6 +279,66 @@ a:visited {
   border-radius: none;
   padding: 0.75em 2em;
   cursor: pointer;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .nav-btn {
+    padding: 0.5em 1.5em;
+  }
+}
+.nav .mobile-menu {
+  display: flex;
+  padding-top: 5vw;
+  gap: 2vw;
+}
+.nav .hamburger-nav {
+  display: none;
+  color: #EFEFEB;
+  font-size: 3em;
+  padding-right: 2vw;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .nav .hamburger-nav {
+    display: block;
+  }
+}
+.nav .hamburger-bag {
+  display: none;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .nav .hamburger-bag {
+    display: block;
+    padding-right: 5vw;
+    font-size: 3em;
+  }
+}
+.nav .hamburger-menu {
+  width: 100%;
+  position: absolute;
+  margin-top: 20vw;
+  background-color: #EFEFEB;
+  padding: 5vw;
+  z-index: 600;
+  display: none;
+}
+.nav .hamburger-menu .hamburger__ul {
+  width: 100%;
+  padding: 0;
+  font-size: 1.2em;
+  font-weight: 300;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.nav .hamburger-menu .hamburger__btn {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cards {
@@ -402,19 +498,59 @@ a:visited {
   width: 50%;
   z-index: 100;
 }
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .landing__hero .landing__intro {
+    width: 100%;
+    height: 100vh;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px), (min-width: 1025px) and (max-width: 1200px) {
+  .landing__hero .landing__intro {
+    width: 80%;
+  }
+}
 .landing__hero .landing__intro-header {
-  margin-right: 38%;
+  margin-right: 52%;
   font-family: "Cremona", sans-serif;
   font-size: 3.75em;
   font-weight: 400;
+}
+@media (max-width: 480px), (min-width: 481px) and (max-width: 768px) {
+  .landing__hero .landing__intro-header {
+    margin: 0;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .landing__hero .landing__intro-header {
+    margin-right: 42%;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .landing__hero .landing__intro-header {
+    margin-right: 30%;
+  }
 }
 .landing__hero .landing__intro-heading {
   color: #EFEFEB;
   font-size: 5rem;
 }
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .landing__hero .landing__intro-heading {
+    font-size: 3.5rem;
+  }
+}
 .landing__hero .landing__intro-rotate {
   display: inline;
   text-indent: 0.4em;
+}
+@media (max-width: 480px), (min-width: 481px) and (max-width: 768px) {
+  .landing__hero .landing__intro-rotate {
+    display: flex;
+    text-indent: 0;
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 5vw;
+  }
 }
 .landing__hero .landing__intro-rotate-1 span {
   position: absolute;
@@ -460,6 +596,11 @@ a:visited {
   font-weight: 400;
   color: #EFEFEB;
 }
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .landing__hero .landing__intro-subheading {
+    padding: 0 10vw;
+  }
+}
 .landing__hero .landing__intro-proceed {
   display: flex;
   align-items: center;
@@ -499,6 +640,11 @@ a:visited {
   z-index: 100;
   overflow: hidden;
 }
+@media (max-width: 480px) {
+  .landing__background {
+    height: 300%;
+  }
+}
 .landing__background .page-heading__right {
   height: 100%;
   width: 100%;
@@ -520,6 +666,13 @@ a:visited {
     top: -42vw;
   }
 }
+@media (max-width: 480px) {
+  .landing__background .page-heading__right .landing-background__right {
+    width: 120vw;
+    right: -45vw;
+    top: -82vw;
+  }
+}
 .landing__background .page-heading__right .svg-curve-right {
   width: 40vw;
   height: auto;
@@ -527,9 +680,16 @@ a:visited {
   top: 1vw;
   right: -12vw;
 }
+@media (max-width: 480px) {
+  .landing__background .page-heading__right .svg-curve-right {
+    width: 100vw;
+    top: 22vw;
+    right: -12vw;
+  }
+}
 .landing__background .page-heading__right .svg-curve-right .path-right {
   fill: transparent;
-  width: 10vw;
+  width: 15vw;
   height: auto;
 }
 .landing__background .page-heading__right .svg-curve-right textPath {
@@ -540,6 +700,11 @@ a:visited {
   letter-spacing: 0.15em;
   white-space: nowrap;
   fill: #4A4F4F;
+}
+@media (max-width: 480px) {
+  .landing__background .page-heading__right .svg-curve-right textPath {
+    font-size: 4em;
+  }
 }
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
   .landing__background .page-heading__right .svg-curve-right {
@@ -561,6 +726,13 @@ a:visited {
   top: -6vw;
   transform: rotate(10.32deg);
 }
+@media (max-width: 480px) {
+  .landing__background .page-heading__left .landing-background__left {
+    width: 100vw;
+    top: 100vw;
+    left: -50vw;
+  }
+}
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
   .landing__background .page-heading__left .landing-background__left {
     width: 45vw;
@@ -576,6 +748,13 @@ a:visited {
   left: 7.5vw;
   font-size: 100%;
 }
+@media (max-width: 480px) {
+  .landing__background .page-heading__left .svg-curve-left {
+    width: 68vw;
+    top: 200vw;
+    right: -12vw;
+  }
+}
 .landing__background .page-heading__left .svg-curve-left .path-left {
   fill: transparent;
   width: 15vw;
@@ -589,6 +768,11 @@ a:visited {
   letter-spacing: 0.15em;
   white-space: nowrap;
   fill: #4A4F4F;
+}
+@media (max-width: 480px) {
+  .landing__background .page-heading__left .svg-curve-left textPath {
+    font-size: 5.6em;
+  }
 }
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
   .landing__background .page-heading__left .svg-curve-left {
@@ -622,6 +806,11 @@ a:visited {
   .landing__content-container {
     padding: 0 10%;
     gap: 5vw;
+  }
+}
+@media (max-width: 480px) {
+  .landing__content-container {
+    margin-top: 75vw;
   }
 }
 .landing__content-images {
@@ -708,6 +897,15 @@ a:visited {
   padding-left: 10vw;
   position: relative;
   z-index: 600;
+  padding-bottom: 5vw;
+}
+@media (max-width: 480px) {
+  .landing__products {
+    padding-top: 45vw;
+  }
+  .landing__products .cards {
+    min-width: 50vw;
+  }
 }
 .landing__products-cards {
   display: -webkit-inline-box;
@@ -748,6 +946,9 @@ a:visited {
   border-bottom: 2px #F4794F solid;
   cursor: pointer;
 }
+.landing__products .nav-fa-landing {
+  color: #F4794F;
+}
 
 @media screen and (min-width: 1201px) and (max-width: 1500px) {
   .landing__content-body {
@@ -770,9 +971,6 @@ a:visited {
     gap: 2em;
     padding: 0;
     flex-basis: 40%;
-  }
-  .landing__content-image {
-    width: 25vw;
   }
   .landing__content-image:nth-child(2) {
     margin: 0;
@@ -2140,6 +2338,13 @@ a:visited {
   flex-direction: column;
   justify-content: center;
 }
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .footer-upper {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
 .footer-upper__cta {
   color: #EFEFEB;
   font-family: "Assistant", sans-serif;
@@ -2149,6 +2354,11 @@ a:visited {
   letter-spacing: 0.05em;
   text-align: center;
   padding-bottom: 1.5em;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .footer-upper__cta {
+    font-size: 1.8em;
+  }
 }
 .footer-upper__btn-container {
   width: 100%;
@@ -2175,7 +2385,8 @@ a:visited {
 }
 @media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
   .footer-upper__btn-container .sell-work-btn {
-    font-size: 2em;
+    font-size: 1.5em;
+    padding: 0.5 1em;
   }
 }
 .footer-lower {
@@ -2230,6 +2441,13 @@ a:visited {
     color: #4A4F4F;
     padding-top: 1em;
   }
+}
+@media (min-width: 481px) and (max-width: 768px) and (max-width: 480px), (max-width: 480px) and (max-width: 480px) {
+  .footer-lower .footer-logo__display {
+    font-size: 3em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
   .footer-lower .footer-logo__tag {
     font-family: "Assistant", sans-serif;
     font-size: 1.8em;
@@ -2238,11 +2456,20 @@ a:visited {
     font-weight: 300;
     color: #4A4F4F;
   }
+}
+@media (min-width: 481px) and (max-width: 768px) and (max-width: 480px), (max-width: 480px) and (max-width: 480px) {
+  .footer-lower .footer-logo__tag {
+    font-size: 1.5em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
   .footer-lower__left {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
   .footer-lower__right {
     text-align: center;
     width: 100%;
@@ -2272,6 +2499,11 @@ a:visited {
   color: #4A4F4F;
   font-weight: 400;
 }
+@media (max-width: 480px) {
+  .footer-bottom {
+    padding: 5em;
+  }
+}
 .footer-bottom .privacy, .footer-bottom .welly-potters {
   display: flex;
   align-items: center;
@@ -2291,6 +2523,12 @@ a:visited {
   border-radius: 2em;
   text-align: center;
   cursor: pointer;
+}
+@media (max-width: 480px) {
+  .footer-bottom .socials-container {
+    line-height: 1.5em;
+    width: 1.5em;
+  }
 }
 @media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
   .footer-bottom {
