--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5% !important;
+  scroll-behavior: smooth;
 }
 
 li {
@@ -397,13 +398,25 @@ a:visited {
   z-index: 1000;
 }
 .secondary-nav__logo {
-  min-width: 15vw;
-  max-width: 15vw;
+  min-width: 18vw;
+  max-width: 18vw;
   object-fit: contain;
   z-index: 51;
 }
 .secondary-nav__logo .secondary-nav-logo {
   object-fit: contain;
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .secondary-nav__logo {
+    min-width: 40vw;
+    max-width: 40vw;
+  }
+}
+@media (max-width: 480px) {
+  .secondary-nav__logo {
+    min-width: 60vw;
+    max-width: 60vw;
+  }
 }
 .secondary-nav .secondary-nav__back {
   display: flex;
@@ -437,6 +450,16 @@ a:visited {
   margin-bottom: 0;
   padding: 0;
 }
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .secondary-nav__ul {
+    gap: 5em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .secondary-nav__ul {
+    display: none;
+  }
+}
 .secondary-nav-li {
   font-family: "Assistant", sans-serif;
   font-size: 1.6em;
@@ -452,11 +475,25 @@ a:visited {
   flex-direction: row;
   gap: 3em;
   align-items: center;
-  padding-right: 10vw;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .secondary-nav__btn {
+    padding-right: 5vw;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .secondary-nav__btn {
+    display: none;
+  }
 }
 .secondary-nav-fa-landing {
   color: #4A4F4F;
   font-size: 3em;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .secondary-nav-fa-landing {
+    font-size: 2.5em;
+  }
 }
 .secondary-nav-btn {
   font-family: "Assistant", sans-serif;
@@ -470,6 +507,67 @@ a:visited {
   padding: 0.75em 2em;
   cursor: pointer;
   font-size: 1.8em;
+}
+@media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
+  .secondary-nav-btn {
+    padding: 0.5em 1.5em;
+  }
+}
+.secondary-nav .mobile-menu {
+  display: flex;
+  padding-top: 5vw;
+  gap: 2vw;
+}
+.secondary-nav .hamburger-nav {
+  display: none;
+  color: #4A4F4F;
+  font-size: 3em;
+  padding-right: 2vw;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .secondary-nav .hamburger-nav {
+    display: block;
+  }
+}
+.secondary-nav .hamburger-bag {
+  display: none;
+  color: #4A4F4F;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .secondary-nav .hamburger-bag {
+    display: block;
+    padding-right: 5vw;
+    font-size: 3em;
+  }
+}
+.secondary-nav .hamburger-menu {
+  width: 100%;
+  position: absolute;
+  margin-top: 20vw;
+  background-color: #EFEFEB;
+  padding: 5vw;
+  z-index: 600;
+  display: none;
+}
+.secondary-nav .hamburger-menu .hamburger__ul {
+  width: 100%;
+  padding: 0;
+  font-size: 1.2em;
+  font-weight: 300;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.secondary-nav .hamburger-menu .hamburger__btn {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .landing__hero {
@@ -636,7 +734,7 @@ a:visited {
 
 .landing__background {
   width: 100%;
-  height: 100%;
+  height: 160vh;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -810,6 +908,7 @@ a:visited {
   .landing__content-container {
     padding: 0 10%;
     gap: 5vw;
+    padding-bottom: none;
   }
 }
 @media (max-width: 480px) {
@@ -823,6 +922,7 @@ a:visited {
   flex-direction: row;
   padding-left: 10vw;
   gap: 1.6rem;
+  height: fit-content;
 }
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
   .landing__content-images {
@@ -834,7 +934,7 @@ a:visited {
   width: 18vw;
   height: auto;
   position: relative;
-  top: 15vh;
+  top: 8vw;
 }
 @media (min-width: 1025px) and (max-width: 1200px), (min-width: 769px) and (max-width: 1024px) {
   .landing__content-image {
@@ -905,10 +1005,7 @@ a:visited {
 }
 @media (max-width: 480px) {
   .landing__products {
-    padding-top: 45vw;
-  }
-  .landing__products .cards {
-    min-width: 50vw;
+    padding-top: 50vw;
   }
 }
 .landing__products-cards {
@@ -1915,6 +2012,12 @@ a:visited {
   display: flex;
   justify-content: flex-end;
   padding-bottom: 3vw;
+}
+@media (min-width: 481px) and (max-width: 768px), (max-width: 480px) {
+  .products-title {
+    margin-top: 5vw;
+    margin-bottom: 8vw;
+  }
 }
 .products-title .title {
   font-family: "Cremona", sans-serif;
