--- a/frontend/sass/_landing.scss
+++ b/frontend/sass/_landing.scss
@@ -153,7 +153,7 @@
 
 .landing__background{
         width: 100%;
-        height: 100%;
+        height: 160vh;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
@@ -411,7 +411,7 @@
     z-index: 499;
     height: inherit;
 
-  
+    
 
     &-container{
         display: flex;
@@ -421,6 +421,7 @@
         @media #{$laptop, $smallScreen} {
             padding: 0 10%;
             gap: 5vw;
+            padding-bottom: none;
         }
 
         @media #{$mobile}{
@@ -435,7 +436,8 @@
         flex-direction: row;
         padding-left: 10vw;
         gap: 1.6rem;
-        // justify-content: center;
+        height: fit-content;
+        // justify-content: flex-start;
 
         @media #{$laptop, $smallScreen} {
             margin-top: 20vw !important;
@@ -447,7 +449,7 @@
         width: 18vw;
         height: auto;
         position: relative;
-        top: 15vh;
+        top: 8vw;
 
         @media #{$laptop, $smallScreen} {
             top: 5vw;
@@ -532,11 +534,7 @@
     padding-bottom: 5vw;
 
     @media #{$mobile}{
-        padding-top: 45vw;
-
-        .cards{
-            min-width: 50vw;
-        }
+        padding-top: 50vw;
     }
 
     &-cards{
@@ -550,7 +548,6 @@
         scrollbar-width: none;
         // overflow-x: scroll;
         overflow: auto;
-
         
     }
 
