--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5% !important;
+  scroll-behavior: smooth;
 }
 
 li {
@@ -2093,12 +2094,44 @@ a:visited {
 .product-images {
   display: flex;
 }
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .product-images {
+    flex-basis: 40%;
+    flex-direction: column-reverse;
+    gap: 1em;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .product-images {
+    flex-basis: 40%;
+    flex-direction: column-reverse;
+    gap: 1em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .product-images {
+    flex-basis: 40%;
+    flex-direction: column-reverse;
+    gap: 1em;
+  }
+}
+@media (max-width: 480px) {
+  .product-images {
+    flex-direction: column-reverse;
+    gap: 1em;
+  }
+}
 
 .images-left {
   display: flex;
   flex-direction: column;
   gap: 1vw;
   padding-right: 1vw;
+}
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .images-left {
+    flex-direction: row;
+  }
 }
 
 .product-img-one, .product-img-two, .product-img-three {
@@ -2112,9 +2145,57 @@ a:visited {
   transition: 0.4s;
   cursor: pointer;
 }
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .product-img-one, .product-img-two, .product-img-three {
+    height: 11vw;
+    width: 11vw;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .product-img-one, .product-img-two, .product-img-three {
+    height: 11vw;
+    width: 11vw;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .product-img-one, .product-img-two, .product-img-three {
+    height: 11vw;
+    width: 11vw;
+  }
+}
+@media (max-width: 480px) {
+  .product-img-one, .product-img-two, .product-img-three {
+    height: 11vw;
+    width: 11vw;
+  }
+}
 
 .main-image {
   height: 26vw;
+}
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .main-image {
+    height: 35vw;
+    width: 35vw;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .main-image {
+    height: 35vw;
+    width: 35vw;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .main-image {
+    height: 35vw;
+    width: 35vw;
+  }
+}
+@media (max-width: 480px) {
+  .main-image {
+    height: 35vw;
+    width: 35vw;
+  }
 }
 
 .product-description__upper {
